--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "run-s build server",
-    "dev:p": "run-s clean development parcel:dev",
-    "dev:bs": "run-s production",
+    "predev": "run-s clean development",
+    "dev": "run-p server parcel:dev",
+    "dev:bs": "run-s development",
     "predev:bs": "run-s clean",
     "postdev:bs": "run-p server browsersync",
     "server": "node server.js",
@@ -18,7 +19,10 @@
     "development": "NODE_ENV=development",
     "production": "NODE_ENV=production",
     "browsersync": "node ./browserSync.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "heroku config:set PROTOCOL=https HOST=sritong.herokuapp.com/",
+    "deploy": "git push -f heroku hypersimple:master",
+    "postdeploy": "heroku logs --tail"
   },
   "author": "av8ta",
   "license": "MIT",
@@ -29,6 +33,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "dotenv": "^8.0.0",
     "http-proxy-middleware": "^0.19.1",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.3",
